# unifi-protect-video-downloader

./: .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  BUILD.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  test.py  testresults.xml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  dockerbuild.yml  mdbook.yml  pythonpackage.yml
docs/: book.toml
docs/api/: index.html
docs/src/: SUMMARY.md  frequently_asked_questions.md  getting_started.md  introduction.md
docs/src/usage/: index.md
docs/src/usage/protect_archiver/: download.md  events.md  sync.md
fixtures/: access-key.json  bootstrap.json  token.json
legal/: CODE_OF_CONDUCT.md  CONTRIBUTORS.md  CONTRIBUTOR_LICENSE_AGREEMENT.md  COPYRIGHT.md  LEGAL_NOTICES.md  LICENSE  PRIVACY_POLICY.md  SECURITY.md  VERSION_SUPPORT_POLICY.md
protect-archiver/: pyproject.toml
protect_archiver/: client.py  config.py  dataclasses.py  errors.py  sync.py  test_client.py  test_utils.py  utils.py
protect_archiver/auth/: __init__.py  uck.py
protect_archiver/cli/: __init__.py  base.py  download.py  events.py  sync.py
protect_archiver/client/: __init__.py  legacy.py  uck.py  udm.py  unifi_os.py
protect_archiver/downloader/: __init__.py  download_file.py  download_footage.py  download_motion_event.py  download_snapshot.py  get_camera_list.py  get_motion_event_list.py
unifi_protect/: cli.py  sync.py
unifi_protect/cli/: __init__.py  sync.py
