[tool.poetry]
name = "unifi-protect"
version = "0.1.0"
description = ""
authors = ["Daniel Fernau", "David Cramer"]
license = "GPLv3"
packages = [
    { include = "unifi_protect"}
]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
requests = {extras = ["security"], version = "^2.22.0"}
click = "^7.0"

[tool.poetry.dev-dependencies]
Black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
unifi-protect = 'unifi_protect.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
