[tool.poetry]
name = "protect-archiver"
version = "2.1.2"
description = "UniFi Protect Video Downloader"
authors = ["Daniel Fernau", "David Cramer"]
license = "MIT"

readme = "README.md"

packages = [
    { include = "protect_archiver"}
]

homepage = "https://github.com/danielfernau/unifi-protect-video-downloader"
repository = "https://github.com/danielfernau/unifi-protect-video-downloader"

classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


[tool.poetry.dependencies]
python = "^3.8.2"
pip = "*"
python-dateutil = "^2.8.1"
requests = {extras = ["security"], version = "^2.31.0"}
click = "^8.1.7"
types-python-dateutil = "^2.8.19"
types-requests = "^2.31.0"


[tool.poetry.dev-dependencies]
black = "*"
codecov = "*"
flake8 = "*"
isort = "^5.13.2"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pylint = "*"
responses = "*"
pytest-responses = "*"
pytest-xdist = "*"


[tool.poetry.scripts]
protect-archiver = 'protect_archiver.cli:main'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
py_version = 39
profile = "black"
force_single_line = true
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
src_paths = ["protect_archiver", "tests"]


[tool.black]
line-length = 100
experimental_string_processing = true
force-exclude = '''
.*/setup\.py$
'''


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "protect_archiver"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
